[package]
name = "async-once-watch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
event-listener = "2.5.2"
once_cell = "1.9.0"

[dev-dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }
futures = "0.3.21"
rand = "0.8.5"
