[package]
name = "async-once-watch"
version = "0.1.0"
edition = "2021"
description = "Asynchronous and shareable container which value is set once."
authors = ["Jerry Lin <jerry73204@gmail.com>"]
categories = ["concurrency"]
documentation = "https://docs.rs/async-once-watch/"
repository = "https://github.com/jerry73204/async-once-watch.git"
homepage = "https://github.com/jerry73204/async-once-watch"
readme = "README.md"
license = "MIT"

[dependencies]
tokio = { version = "1.17.0", features = ["sync"] }

[dev-dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }
futures = "0.3.21"
rand = "0.8.5"
once_cell = "1.9.0"
